<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_action_search"
        android:orderInCategory="100"
        android:title="@string/abc_search_hint"

        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>


    <item
        android:id="@+id/action_sort_by_popular"
        android:orderInCategory="1"
        android:title="@string/action_sort_by_popular" />

    <item
        android:id="@+id/action_sort_by_rating"
        android:orderInCategory="1"
        android:title="@string/action_sort_by_rating" />

    <item
        android:id="@+id/action_sort_by_favorite"
        android:orderInCategory="1"
        android:title="@string/action_sort_by_favorite" />

</menu>