<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sibangstudio.popularmovie.MovieDetail"
    tools:showIn="@layout/activity_movie_detail">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_large">

            <ImageView
                android:id="@+id/imgBackdrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/details_backdrop_height"
                android:contentDescription="@string/content_desc_backdrop_image"
                android:scaleType="fitXY"
                tools:background="#f00" />

            <ImageView
                android:id="@+id/imgPoster"
                android:layout_width="@dimen/details_poster_width"
                android:layout_height="@dimen/details_poster_height"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/details_poster_margin_top"
                android:background="#ffffff"
                android:contentDescription="@string/content_desc_movie_poster"
                android:padding="1dp"
                android:scaleType="centerCrop"
                tools:background="#ccc" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgBackdrop"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_toEndOf="@id/imgPoster"
                android:layout_toRightOf="@id/imgPoster"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                tools:text="The Hunger Games: Mockingjay - Part 2" />

            <TextView
                android:id="@+id/txtReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTitle"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@id/imgPoster"
                android:layout_toRightOf="@id/imgPoster"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                tools:text="2015" />

            <LinearLayout
                android:id="@+id/rating_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtReleaseDate"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="-8dp"
                android:layout_toEndOf="@id/imgPoster"
                android:layout_toRightOf="@id/imgPoster"
                android:clipChildren="false"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="?android:attr/textColorPrimary"
                    tools:text="7.3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:text="@string/rating_denominator"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>


            <TextView
                android:id="@+id/txtSinopsisLabel"
                android:layout_below="@id/imgPoster"
                android:textStyle="bold"
                android:textColor="#000"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:paddingLeft="@dimen/globalPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/detail_sonopsis_label" />

            <TextView
                android:id="@+id/txtOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtSinopsisLabel"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:lineSpacingMultiplier="@dimen/body_text_line_spacing"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="With the nation of Panem in a full scale war, Katniss confronts President Snow in the final showdown. Teamed with a group of her closest friends – including Gale, Finnick, and Peeta – Katniss goes off on a mission with the unit from District 13 as they risk their lives to stage an assassination attempt on President Snow who has become increasingly obsessed with destroying her. The mortal traps, enemies, and moral choices that await Katniss will challenge her more than any arena she faced in The Hunger Games." />


            <!-- trailer -->
            <LinearLayout
                android:id="@+id/trailer_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtOverview"
                android:clipChildren="false"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:paddingLeft="@dimen/globalPadding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/detail_trailer_label" />

                <TextView
                    android:visibility="gone"
                    android:paddingLeft="@dimen/globalPadding"
                    android:id="@+id/txtErrorTrailer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/trailer_empty_label"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true" />
            </LinearLayout>

            <!-- Review -->
            <LinearLayout
                android:id="@+id/review_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/trailer_container"
                android:clipChildren="true"
                android:gravity="bottom"
                android:orientation="vertical"
                android:padding="@dimen/globalPadding">

                <TextView
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/detail_review_label" />
                <TextView
                     android:visibility="gone"
                    android:id="@+id/txtErrorReview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/review_empty_label"/>


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </RelativeLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
